nautilus: Don't include gdk headers in the nautilus extension

https://gitlab.gnome.org/GNOME/gnome-terminal/-/issues/7916