src/terminal-client-utils.cc
@@ -29,9 +29,11 @@
 
 #include <gio/gio.h>
 
+#ifndef TERMINAL_NAUTILUS
 #include <gdk/gdk.h>
 #if defined(TERMINAL_COMPILATION) && defined(GDK_WINDOWING_X11)
 #include <gdk/gdkx.h>
+#endif
 #endif
 
 /**
@@ -268,6 +270,8 @@ terminal_client_append_exec_options (GVariantBuilder *builder,
   }
 }
 
+#ifndef TERMINAL_NAUTILUS
+
 /**
  * terminal_client_get_fallback_startup_id:
  *
@@ -332,6 +336,8 @@ out:
 #endif
   return nullptr;
 }
+
+#endif /* !TERMINAL_NAUTILUS */
 
 GSettings*
 terminal_g_settings_new_with_path (GSettingsSchemaSource* source,
